// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker Picker render visible 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-popup"
  >
    <div
      class="za-popup-wrapper za-popup-wrapper-bottom"
      style="-webkit-transition-duration:200ms;transition-duration:200ms"
    >
      <div
        class="za-picker-wrapper"
      >
        <div
          class="za-picker-header"
        >
          <div
            class="za-picker-cancel"
          >
            取消
          </div>
          <div
            class="za-picker-title"
          >
            请选择
          </div>
          <div
            class="za-picker-submit"
          >
            确定
          </div>
        </div>
        <div
          class="za-picker-mask-top"
        >
          <div
            class="za-picker-mask-bottom"
          >
            <div
              class="za-picker-view"
            >
              <div
                class="za-wheel"
              >
                <div
                  class="za-wheel-indicator"
                />
                <div
                  class="za-wheel-content"
                >
                  <div
                    class="za-wheel-item za-wheel-item-selected"
                  >
                    选项一
                  </div>
                  <div
                    class="za-wheel-item"
                  >
                    选项二
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="za-mask normal"
      style="-webkit-animation-duration:200ms;animation-duration:200ms"
    />
  </div>
</div>
`;

exports[`Picker StackPicker 1`] = `
<PickerStack
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "label": "大观区",
                "value": "340803",
              },
            ],
            "label": "安庆市",
            "value": "340800",
          },
        ],
        "label": "安徽省",
        "value": "340000",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "label": "澳门半岛",
            "value": "820100",
          },
          Object {
            "children": Array [],
            "label": "离岛",
            "value": "820200",
          },
        ],
        "label": "澳门特别行政区",
        "value": "820000",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "label": "昌平区",
                "value": "110114",
              },
              Object {
                "children": Array [],
                "label": "朝阳区",
                "value": "110105",
              },
              Object {
                "children": Array [],
                "label": "崇文区",
                "value": "110103",
              },
              Object {
                "children": Array [],
                "label": "大兴区",
                "value": "110115",
              },
              Object {
                "children": Array [],
                "label": "东城区",
                "value": "110101",
              },
              Object {
                "children": Array [],
                "label": "房山区",
                "value": "110111",
              },
              Object {
                "children": Array [],
                "label": "丰台区",
                "value": "110106",
              },
              Object {
                "children": Array [],
                "label": "海淀区",
                "value": "110108",
              },
              Object {
                "children": Array [],
                "label": "怀柔区",
                "value": "110116",
              },
              Object {
                "children": Array [],
                "label": "门头沟区",
                "value": "110109",
              },
              Object {
                "children": Array [],
                "label": "密云县",
                "value": "110228",
              },
              Object {
                "children": Array [],
                "label": "平谷区",
                "value": "110117",
              },
              Object {
                "children": Array [],
                "label": "其它区",
                "value": "110230",
              },
              Object {
                "children": Array [],
                "label": "石景山区",
                "value": "110107",
              },
              Object {
                "children": Array [],
                "label": "顺义区",
                "value": "110113",
              },
              Object {
                "children": Array [],
                "label": "通州区",
                "value": "110112",
              },
              Object {
                "children": Array [],
                "label": "西城区",
                "value": "110102",
              },
              Object {
                "children": Array [],
                "label": "宣武区",
                "value": "110104",
              },
              Object {
                "children": Array [],
                "label": "延庆县",
                "value": "110229",
              },
            ],
            "label": "北京市",
            "value": "110100",
          },
        ],
        "label": "北京",
        "value": "110000",
      },
    ]
  }
  disabled={false}
  displayRender={[Function]}
  itemRender={[Function]}
  onCancel={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  validate={[Function]}
  value={Array []}
  valueMember="value"
>
  <div
    className="za-picker"
  >
    <div
      className="za-picker-input za-picker-placeholder"
      onClick={[Function]}
    >
      <input
        type="hidden"
        value=""
      />
    </div>
    <Popup
      animationDuration={200}
      autoClose={false}
      direction="bottom"
      mask={true}
      maskType="normal"
      onMaskClick={[Function]}
      prefixCls="za-popup"
      stayTime={3000}
      visible={false}
    >
      <div
        className="za-popup za-popup-hidden"
      >
        <div
          className="za-popup-wrapper za-popup-wrapper-bottom"
          style={
            Object {
              "WebkitTransitionDuration": "200ms",
              "transitionDuration": "200ms",
            }
          }
        >
          <div
            className="za-picker-wrapper"
          >
            <div
              className="za-picker-header"
            >
              <div
                className="za-picker-cancel"
                onClick={[Function]}
              >
                取消
              </div>
              <div
                className="za-picker-title"
              >
                请选择
              </div>
              <div
                className="za-picker-submit"
              />
            </div>
            <div
              className="za-picker-crumbs"
            >
              <p>
                选择：
              </p>
            </div>
            <div
              className="za-picker-stack-group"
            >
              <div
                className="za-picker-stack-column lower-hidden"
                key="0"
                onClick={[Function]}
              >
                <div
                  className="za-picker-stack-column-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-item"
                    key="0"
                    onClick={[Function]}
                  >
                    安徽省
                  </div>
                  <div
                    className="za-picker-stack-item"
                    key="1"
                    onClick={[Function]}
                  >
                    澳门特别行政区
                  </div>
                  <div
                    className="za-picker-stack-item"
                    key="2"
                    onClick={[Function]}
                  >
                    北京
                  </div>
                </div>
              </div>
              <div
                className="za-picker-stack-column lower-hidden"
                key="1"
                onClick={[Function]}
              >
                <div
                  className="za-picker-stack-column-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-item"
                    key="0"
                    onClick={[Function]}
                  >
                    安庆市
                  </div>
                </div>
              </div>
              <div
                className="za-picker-stack-column lower-hidden"
                key="2"
                onClick={[Function]}
              >
                <div
                  className="za-picker-stack-column-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-item"
                    key="0"
                    onClick={[Function]}
                  >
                    大观区
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <Mask
          className=""
          onClose={[Function]}
          prefixCls="za-mask"
          style={
            Object {
              "WebkitAnimationDuration": "200ms",
              "animationDuration": "200ms",
            }
          }
          type="normal"
          visible={false}
        />
      </div>
    </Popup>
  </div>
</PickerStack>
`;

exports[`Picker StackPicker init value 1`] = `
<PickerStack
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "label": "大观区",
                "value": "340803",
              },
            ],
            "label": "安庆市",
            "value": "340800",
          },
        ],
        "label": "安徽省",
        "value": "340000",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "label": "澳门半岛",
            "value": "820100",
          },
          Object {
            "children": Array [],
            "label": "离岛",
            "value": "820200",
          },
        ],
        "label": "澳门特别行政区",
        "value": "820000",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "label": "昌平区",
                "value": "110114",
              },
              Object {
                "children": Array [],
                "label": "朝阳区",
                "value": "110105",
              },
              Object {
                "children": Array [],
                "label": "崇文区",
                "value": "110103",
              },
              Object {
                "children": Array [],
                "label": "大兴区",
                "value": "110115",
              },
              Object {
                "children": Array [],
                "label": "东城区",
                "value": "110101",
              },
              Object {
                "children": Array [],
                "label": "房山区",
                "value": "110111",
              },
              Object {
                "children": Array [],
                "label": "丰台区",
                "value": "110106",
              },
              Object {
                "children": Array [],
                "label": "海淀区",
                "value": "110108",
              },
              Object {
                "children": Array [],
                "label": "怀柔区",
                "value": "110116",
              },
              Object {
                "children": Array [],
                "label": "门头沟区",
                "value": "110109",
              },
              Object {
                "children": Array [],
                "label": "密云县",
                "value": "110228",
              },
              Object {
                "children": Array [],
                "label": "平谷区",
                "value": "110117",
              },
              Object {
                "children": Array [],
                "label": "其它区",
                "value": "110230",
              },
              Object {
                "children": Array [],
                "label": "石景山区",
                "value": "110107",
              },
              Object {
                "children": Array [],
                "label": "顺义区",
                "value": "110113",
              },
              Object {
                "children": Array [],
                "label": "通州区",
                "value": "110112",
              },
              Object {
                "children": Array [],
                "label": "西城区",
                "value": "110102",
              },
              Object {
                "children": Array [],
                "label": "宣武区",
                "value": "110104",
              },
              Object {
                "children": Array [],
                "label": "延庆县",
                "value": "110229",
              },
            ],
            "label": "北京市",
            "value": "110100",
          },
        ],
        "label": "北京",
        "value": "110000",
      },
    ]
  }
  disabled={false}
  displayRender={[Function]}
  itemRender={[Function]}
  onCancel={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  validate={[Function]}
  value={
    Array [
      "340000",
      "340800",
      "340803",
    ]
  }
  valueMember="value"
>
  <div
    className="za-picker"
  >
    <div
      className="za-picker-input"
      onClick={[Function]}
    >
      <input
        type="hidden"
        value="340000,340800,340803"
      />
      安徽省安庆市大观区
    </div>
    <Popup
      animationDuration={200}
      autoClose={false}
      direction="bottom"
      mask={true}
      maskType="normal"
      onMaskClick={[Function]}
      prefixCls="za-popup"
      stayTime={3000}
      visible={false}
    >
      <div
        className="za-popup za-popup-hidden"
      >
        <div
          className="za-popup-wrapper za-popup-wrapper-bottom"
          style={
            Object {
              "WebkitTransitionDuration": "200ms",
              "transitionDuration": "200ms",
            }
          }
        >
          <div
            className="za-picker-wrapper"
          >
            <div
              className="za-picker-header"
            >
              <div
                className="za-picker-cancel"
                onClick={[Function]}
              >
                取消
              </div>
              <div
                className="za-picker-title"
              >
                请选择
              </div>
              <div
                className="za-picker-submit"
              />
            </div>
            <div
              className="za-picker-crumbs"
            >
              <p>
                选择：
                安徽省 &gt; 安庆市 &gt; 大观区
              </p>
            </div>
            <div
              className="za-picker-stack-group"
            >
              <div
                className="za-picker-stack-column"
                key="0"
                onClick={[Function]}
              >
                <div
                  className="za-picker-stack-column-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-item active"
                    key="0"
                    onClick={[Function]}
                  >
                    安徽省
                  </div>
                  <div
                    className="za-picker-stack-item"
                    key="1"
                    onClick={[Function]}
                  >
                    澳门特别行政区
                  </div>
                  <div
                    className="za-picker-stack-item"
                    key="2"
                    onClick={[Function]}
                  >
                    北京
                  </div>
                </div>
              </div>
              <div
                className="za-picker-stack-column"
                key="1"
                onClick={[Function]}
              >
                <div
                  className="za-picker-stack-column-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-item active"
                    key="0"
                    onClick={[Function]}
                  >
                    安庆市
                  </div>
                </div>
              </div>
              <div
                className="za-picker-stack-column"
                key="2"
                onClick={[Function]}
              >
                <div
                  className="za-picker-stack-column-wrapper"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-item active"
                    key="0"
                    onClick={[Function]}
                  >
                    大观区
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <Mask
          className=""
          onClose={[Function]}
          prefixCls="za-mask"
          style={
            Object {
              "WebkitAnimationDuration": "200ms",
              "animationDuration": "200ms",
            }
          }
          type="normal"
          visible={false}
        />
      </div>
    </Popup>
  </div>
</PickerStack>
`;

exports[`Picker render custom label 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-popup za-popup-hidden"
  >
    <div
      class="za-popup-wrapper za-popup-wrapper-bottom"
      style="-webkit-transition-duration:200ms;transition-duration:200ms"
    >
      <div
        class="za-picker-wrapper"
      >
        <div
          class="za-picker-header"
        >
          <div
            class="za-picker-cancel"
          >
            取消
          </div>
          <div
            class="za-picker-title"
          >
            请选择
          </div>
          <div
            class="za-picker-submit"
          >
            确定
          </div>
        </div>
        <div
          class="za-picker-mask-top"
        >
          <div
            class="za-picker-mask-bottom"
          >
            <div
              class="za-picker-view"
            >
              <div
                class="za-wheel"
              >
                <div
                  class="za-wheel-indicator"
                />
                <div
                  class="za-wheel-content"
                >
                  <div
                    class="za-wheel-item za-wheel-item-selected"
                  >
                    北京市
                  </div>
                  <div
                    class="za-wheel-item"
                  >
                    上海市
                  </div>
                </div>
              </div>
              <div
                class="za-wheel"
              >
                <div
                  class="za-wheel-indicator"
                />
                <div
                  class="za-wheel-content"
                >
                  <div
                    class="za-wheel-item za-wheel-item-selected"
                  >
                    海淀区
                  </div>
                  <div
                    class="za-wheel-item"
                  >
                    西城区
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
